# mimo-airdrop-scout

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SUBMISSION.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
examples/: base-guild-generated.md  base-guild-report.md
proof/: risky-json-demo.json
src/airdrop_scout/: __init__.py  agents.py  cli.py  llm.py  models.py
src/mimo_airdrop_scout.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_workflow.py
