[project]
name = "mimo-airdrop-scout"
version = "0.1.0"
description = "Agentic airdrop/testnet due-diligence workflow built with Hermes Agent and MiMo-ready LLM hooks."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "maulana", email = "khasbimln@gmail.com"}]
dependencies = ["httpx>=0.27.0"]

[project.scripts]
airdrop-scout = "airdrop_scout.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
